Fix the spacing, and selecting a specific list

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ header {
 footer {
   font-size: 1.5rem;
 }
+
 ul {
   font-family: sans-serif;
 }
@@ -30,9 +31,37 @@ ul {
 }
 
 p + strong {
-   color: #fff;
+  color: #fff;
 }
 
-.no-highlight > a {
+a:not(.no-highlight) {
   background-color: #719e07;
+}
+
+a[rel="external"] {
+  background-color: #2694d8;
+}
+
+ul:first-line > li {
+  color: #719e47;
+}
+
+li:first-child {
+  color: #719e47;
+}
+
+li:last-child {
+  color: #2aa198;
+}
+
+.types li:nth-child(even) {
+  background-color: #657ba3;
+}
+
+.types li:nth-child(odd) {
+  background-color: #586e75;
+}
+
+.types li:nth-child(3n+3) {
+  background-color: #d04b16;
 }
